--- a/RDA2_desarrollo/flexbox/index.html
+++ b/RDA2_desarrollo/flexbox/index.html
@@ -8,19 +8,25 @@
 </head>
 <body>
     <h1>Galeria de imagenes</h1>
-    <div>
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <img src="" alt="">
-        </div>
+    <div class="container">
+        <img src="image/descarga.jpeg" alt="">
+        <img src="image/icono.jpeg" alt="">
+        <img src="image/poster.jpeg" alt="">
+        <img src="image/energía_renovable_apertura-paneles-sostenible-panel-solar-eolica-molinos-medioambiente-1024x629.avif" alt="">
+    </div>
+    <div class="container_grid">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iusto ullam voluptatem, saepe error. Officiis tempora enim dolorum? Eaque praesentium in minima iure obcaecati laboriosam itaque ad consequatur quo!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa, excepturi optio sint mollitia, culpa quia laboriosam deleniti, perferendis ex vero. Corporis quisquam assumenda omnis laudantium vel quis, repellat facere?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus illo at beatae quisquam facere earum quam dolorum, laboriosam, corporis nemo amet ut veritatis numquam et aut! Doloremque, at debitis.
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem velit modi sunt excepturi ab nihil aperiam quos expedita at. Cupiditate dignissimos exercitationem recusandae necessitatibus illo veniam architecto fuga aspernatur facere.
+        </p>
     </div>
 </body>
 </html>
