--- a/RDA2_desarrollo/flexbox/index.html
+++ b/RDA2_desarrollo/flexbox/index.html
@@ -15,12 +15,16 @@
         <img src="image/energía_renovable_apertura-paneles-sostenible-panel-solar-eolica-molinos-medioambiente-1024x629.avif" alt="">
     </div>
     <div class="container_grid">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iusto ullam voluptatem, saepe error. Officiis tempora enim dolorum? Eaque praesentium in minima iure obcaecati laboriosam itaque ad consequatur quo!
-        </p>
-        <p>
+        <div>
+            <h1>ejeml</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iusto ullam voluptatem, saepe error. Officiis tempora enim dolorum? Eaque praesentium in minima iure obcaecati laboriosam itaque ad consequatur quo!
+            </p>
+            <img src="image/descarga.jpeg" alt="">
+        </div>
+        <div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa, excepturi optio sint mollitia, culpa quia laboriosam deleniti, perferendis ex vero. Corporis quisquam assumenda omnis laudantium vel quis, repellat facere?
-        </p>
+        </div>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus illo at beatae quisquam facere earum quam dolorum, laboriosam, corporis nemo amet ut veritatis numquam et aut! Doloremque, at debitis.
         </p>
