actualizacion de web proyecto

--- a/RDA1_desarrollo/tarea2_revilla/catalogo/cerveza.html
+++ b/RDA1_desarrollo/tarea2_revilla/catalogo/cerveza.html
@@ -29,7 +29,7 @@
 <body>
     <header class="flex-row-beteween">
         <div class="flex-row">
-            <img src="resources/img/Iso_tipo.svg" alt="Logo Rivet">
+            <img src="../resources/img/Iso_tipo.svg" alt="Logo Rivet">
             <h1>
                 ivet
             </h1>
