--- a/RDA2_desarrollo/flexbox/index.html
+++ b/RDA2_desarrollo/flexbox/index.html
@@ -9,28 +9,42 @@
 <body>
     <h1>Galeria de imagenes</h1>
     <div class="container">
-        <img src="image/descarga.jpeg" alt="">
-        <img src="image/icono.jpeg" alt="">
-        <img src="image/poster.jpeg" alt="">
-        <img src="image/energía_renovable_apertura-paneles-sostenible-panel-solar-eolica-molinos-medioambiente-1024x629.avif" alt="">
+        <img src="image/descarga.jpeg" class="imagen_1" alt="">
+        <img src="image/icono.jpeg" class="imagen_1" alt="">
+        <img src="image/poster.jpeg" class="imagen_1" alt="">
+        <img src="image/energía_renovable_apertura-paneles-sostenible-panel-solar-eolica-molinos-medioambiente-1024x629.avif" class="imagen_1" alt="">
     </div>
     <div class="container_grid">
-        <div>
-            <h1>ejeml</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iusto ullam voluptatem, saepe error. Officiis tempora enim dolorum? Eaque praesentium in minima iure obcaecati laboriosam itaque ad consequatur quo!
-            </p>
-            <img src="image/descarga.jpeg" alt="">
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa, excepturi optio sint mollitia, culpa quia laboriosam deleniti, perferendis ex vero. Corporis quisquam assumenda omnis laudantium vel quis, repellat facere?
-        </div>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus illo at beatae quisquam facere earum quam dolorum, laboriosam, corporis nemo amet ut veritatis numquam et aut! Doloremque, at debitis.
         </p>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem velit modi sunt excepturi ab nihil aperiam quos expedita at. Cupiditate dignissimos exercitationem recusandae necessitatibus illo veniam architecto fuga aspernatur facere.
         </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem velit modi sunt excepturi ab nihil aperiam quos expedita at. Cupiditate dignissimos exercitationem recusandae necessitatibus illo veniam architecto fuga aspernatur facere.
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem velit modi sunt excepturi ab nihil aperiam quos expedita at. Cupiditate dignissimos exercitationem recusandae necessitatibus illo veniam architecto fuga aspernatur facere.
+        </p>
     </div>
+    <div class="gifimagen">
+        <img src="https://media.tenor.com/sbfBfp3FeY8AAAAj/oia-uia.gif" alt="">
+    </div>
+
+    <div class="heart-beat">
+        &hearts;
+    </div>
+
+    <div class="boton">
+        <button class="btn">
+            Hola mundo
+        </button>
+    </div>
+
+    <div class="scalar">
+        <img src="image/icono.jpeg" alt="" class="escalando">
+    </div>
+    
 </body>
 </html>
